# ingest-file

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.base  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  hack.db  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  daily.yml  discourse.yml  docker-base.yml
convert/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  requirements.txt  setup.py
convert/convert/: app.py  lock.py  process.py  util.py
docs/: conf.py  history.rst  index.rst  specs.md
ingestors/: __init__.py  base.py  cli.py  directory.py  doc.py  exc.py  html.py  ignore.py  image.py  ingestor.py  log.py  manager.py  pdf.py  result.py  settings.py  tabular.py  task_runner.py  text.py  util.py  worker.py
ingestors/analysis/: __init__.py  aggregate.py  country.py  extract.py  ft_type_model.py  language.py  patterns.py  util.py
ingestors/cli/: __init__.py  __main__.py
ingestors/documents/: djvu.py  html.py  image.py  office.py  ooxml.py  opendoc.py  pdf.py  plain.py  tiff.py  xml.py
ingestors/email/: calendar.py  emlx.py  mbox.py  msg.py  olm.py  outlookmsg.py  outlookmsg_lib.py  outlookpst.py  vcard.py
ingestors/media/: audio.py  image.py  svg.py  tiff.py  video.py
ingestors/misc/: ftm.py  jsonfile.py
ingestors/new/: __init__.py  doc.py  html.py  image.py  tabular.py
ingestors/new/support/: fs.py  office.py  pdf.py  xml.py
ingestors/ocr/: languages.py  tesseract.py  vision.py
ingestors/services/: __init__.py  convert.py  googlevision.py  interfaces.py  ocr.py  tesseract.py  util.py
ingestors/support/: __init__.py  cache.py  convert.py  csv.py  email.py  encoding.py  html.py  image.py  ocr.py  ocr_languages.py  office.py  ole.py  ooxml.py  opendoc.py  outlookpst.py  package.py  pdf.py  plain.py  shell.py  soffice.py  table.py  temp.py  timestamp.py  transcription.py  uno.py  xml.py  xmp.py
ingestors/tabular/: access.py  csv.py  dbf.py  messy.py  ods.py  sqlite.py  xls.py  xlsx.py
tests/: support.py  test_access.py  test_archives.py  test_audio.py  test_calendar.py  test_dbf.py  test_directory.py  test_djvu.py  test_doc.py  test_emlx.py  test_ftm.py  test_html.py  test_image.py  test_ingestors.py  test_jsonfile.py  test_msg.py  test_olm.py  test_outlookpst.py  test_packages.py  test_pdf.py  test_tabular.py  test_text.py  test_tiff.py  test_transcription.py  test_vcard.py  test_video.py
tests/fixtures/: 500_pages.7z  500_pages.7z.001  7z_password.7z  bad7zip.7z  badrar.rar  badtar.tar  doc.html  email_attached_alternative.eml  email_attached_inline.eml  email_attached_plaintext.eml  email_base64.eml  email_encode_markup.eml  email_multiline_headers.eml  email_multipart_alternative.eml  email_multipart_mixed.eml  email_multipart_nested.eml  email_strip_markup.eml  meetup.ics  multiline_quoted_printable.vcf  non_utf.txt  ofac.json  password_protected.xls  password_protected.xlsx  plaintext.emlx  rand-1670433101.440986000.odt  regression_openjpeg.jp2  regression_tiff.tiff  richtext.emlx  rom.xls  secret.txt  staff_list.xlsx
tests/ingestors/: test_access.py  test_audio.py  test_cli.py  test_csv.py  test_dbf.py  test_directory.py  test_djvu.py  test_doc.py  test_html.py  test_image.py  test_ingestor.py  test_messy.py  test_msg.py  test_outlookmsg.py  test_outlookpst.py  test_packages.py  test_pdf.py  test_tabular.py  test_text.py  test_tiff.py  test_util.py  test_video.py
tests/perf/: test_office_parallelism.py
