[project]
name = "ingestors"
version = "3.22.0"
description = "Ingestors extract the contents of mixed unstructured documents into structured (followthemoney) data. "
authors = [
    { name = "Friedrich Lindenberg", email = "friedrich@pudo.org" },
    { name = "OCCRP Data Team", email = "data@occrp.org" },
    { name = "DARC", email = "hi@dataresearchcenter.org" },
]
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    # base dependencies
    "banal (==1.0.6)",
    "normality (==2.5.0)",
    "followthemoney (>=3.8.4,<4.0.0)",
    "followthemoney-store[postgresql] (>=3.1.0,<3.2.0)",
    "pyicu (>=2.15.2,<3.0.0)",
    "openaleph-procrastinate (>=0.0.4,<0.0.5)",
    # ingest dependencies
    "google-cloud-vision (==3.7.2)",
    "tesserocr (>=2.8.0,<3.0.0)",
    "dbf (>=0.99.10,<0.100.0)",
    "pymediainfo (>=7.0.1,<8.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "rarfile (>=4.2,<5.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "odfpy (>=1.4.1,<2.0.0)",
    "faust-cchardet (>=2.1.19,<3.0.0)",
    "lxml[html-clean] (>=5.4.0,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pymupdf (>=1.26.1,<2.0.0)",
    "olefile (>=0.47,<0.48)",
    "vobject (>=0.9.9,<0.10.0)",
    "msglite (>=0.30.0,<0.31.0)",
    "icalendar (>=6.3.1,<7.0.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "prometheus-client (==0.17.1)",
    "sentry_sdk (==2.0.1)",
    # analysis dependencies
    "countrytagger (>=0.1.2,<0.2.0)",
    "languagecodes (>=1.1.1,<2.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "fasttext-numpy2 (>=0.10.4,<0.11.0)",
    "pantomime (>=0.6.1,<0.7.0)",
    # servicelayer extras requirements
    "boto3 (>=1.11.9,<2.0.0)",
    "grpcio (>=1.32.0,<2.0.0)",
    "google-cloud-storage (>=1.31.0,<3.0.0)",
    "py7zr (==1.0.0)",
    "servicelayer @ git+https://github.com/openaleph/servicelayer.git@main",
]

[project.scripts]
ingestors = "ingestors.cli:cli"

[project.gui-scripts]
ingestors = "ingestors.cli:cli"

[project.entry-points."ingestors"]
ignore = "ingestors.ignore:IgnoreIngestor"
html = "ingestors.documents.html:HTMLIngestor"
xml = "ingestors.documents.xml:XMLIngestor"
plain = "ingestors.documents.plain:PlainTextIngestor"
office = "ingestors.documents.office:DocumentIngestor"
opendoc = "ingestors.documents.opendoc:OpenDocumentIngestor"
ooxml = "ingestors.documents.ooxml:OfficeOpenXMLIngestor"
djvu = "ingestors.documents.djvu:DjVuIngestor"
pdf = "ingestors.documents.pdf:PDFIngestor"
rar = "ingestors.packages.rar:RARIngestor"
zip = "ingestors.packages.zip:ZipIngestor"
tar = "ingestors.packages.tar:TarIngestor"
7z = "ingestors.packages:SevenZipIngestor"
gz = "ingestors.packages:GzipIngestor"
bz2 = "ingestors.packages:BZ2Ingestor"
pst = "ingestors.email.outlookpst:OutlookPSTIngestor"
olm = "ingestors.email.olm:OutlookOLMArchiveIngestor"
opfmsg = "ingestors.email.olm:OutlookOLMMessageIngestor"
olemsg = "ingestors.email.outlookmsg:OutlookMsgIngestor"
msg = "ingestors.email.msg:RFC822Ingestor"
emlx = "ingestors.email.emlx:AppleEmlxIngestor"
vcard = "ingestors.email.vcard:VCardIngestor"
calendar = "ingestors.email.calendar:CalendarIngestor"
csv = "ingestors.tabular.csv:CSVIngestor"
access = "ingestors.tabular.access:AccessIngestor"
sqlite = "ingestors.tabular.sqlite:SQLiteIngestor"
xls = "ingestors.tabular.xls:ExcelIngestor"
xlsx = "ingestors.tabular.xlsx:ExcelXMLIngestor"
ods = "ingestors.tabular.ods:OpenOfficeSpreadsheetIngestor"
mbox = "ingestors.email.mbox:MboxFileIngestor"
dbf = "ingestors.tabular.dbf:DBFIngestor"
image = "ingestors.media.image:ImageIngestor"
tiff = "ingestors.media.tiff:TIFFIngestor"
svg = "ingestors.media.svg:SVGIngestor"
audio = "ingestors.media.audio:AudioIngestor"
video = "ingestors.media.video:VideoIngestor"
json = "ingestors.misc.jsonfile:JSONIngestor"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.0"
pytest-cov = "5.0.0"
click = "8.2.1"
pre-commit = "^4.2.0"
bump2version = "^1.0.1"
black = "^25.1.0"
ruff = "^0.11.13"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
